--- a/backend/package.json
+++ b/backend/package.json
@@ -9,15 +9,17 @@
     "test": "node test-foxit-correct.js"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.0",
     "@fastify/multipart": "^8.0.0",
     "@fastify/static": "^6.12.0",
     "axios": "^1.6.0",
-    "uuid": "^9.0.1",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
+    "form-data": "^4.0.4",
     "fs-extra": "^11.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
